feat: add dashboard listing and ui
